# tg-rs-upvote-bot

./: Cargo.toml  LICENSE  README.md  quickstart.md
src/: main.rs
