[package]
name = "tg-rs-upvote-bot"
version = "0.1.0"
authors = ["Martin Abente Lahaye <martin.abente.lahaye@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1.23"
log = "0.4.6"
dotenv = "0.13.0"
env_logger = "0.6.0"
tokio = { version = "0.1.7", default-features = false }
tgbot = "0.4"
mongodb = "0.3.11"
chrono = "0.4.9"
time = "0.1.42"
serde = "1.0.101"
regex = "1.3.1"
